--- a/San Jose.yaml
+++ b/San Jose.yaml
@@ -13,12 +13,12 @@ dns:
     - "www.msftncsi.com"
     - "www.msftconnecttest.com"
 proxies:
-  - {name: 🏳️‍🌈 香港阿里云高成本入口, server: 47.242.52.27, port: 443, type: vmess, uuid: 4ae9ca2c-c7b9-4ed5-9564-9a2265de2e80, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /, headers: {Host: sj1.ratzsuck.tk}}}
+  - {name: 🏳️‍🌈 香港腾讯云1Gbps入口, server: 43.129.253.120, port: 443, type: vmess, uuid: 4ae9ca2c-c7b9-4ed5-9564-9a2265de2e80, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /, headers: {Host: sj1.ratzsuck.tk}}}
 proxy-groups:
   - name: Proxies
     type: select
     proxies:
-      - 🏳️‍🌈 香港阿里云高成本入口
+      - 🏳️‍🌈 香港腾讯云1Gbps入口
 rules:
  - GEOIP,CN,DIRECT
  - MATCH,Proxies
