--- a/t.yaml
+++ b/t.yaml
@@ -20,6 +20,7 @@ proxies:
   - {name: 美国B | 江门移动高速入口, server: 120.240.48.25, port: 25048, type: vmess, uuid: 22409413-b8bf-418a-bbdd-e87790b918dd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /api/rn, headers: {Host: usbv2.ddns.tjiasu.xyz}}, udp: true}
   - {name: "🇸🇬 [备用] 新加坡-长沙联通BGP入口", server: 116.162.33.210, port: 25049, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/sg, headers: {Host: sgav2.ddns.tjiasu.xyz}}}
   - {name: "🇺🇸 [备用] 美国A | 上海移动高速入口", server: 117.185.229.112, port: 25064, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/common, headers: {Host: usav2.ddns.tjiasu.xyz}}}
+  - {name: "🇸🇬 [备用] 新加坡-AZ入口", server: 20.24.111.250, port: 36445, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/sg, headers: {Host: sgav2.ddns.tjiasu.xyz}}}
   - {name: "🇺🇸 [备用] 美国B | 江门移动高速入口", server: 120.240.48.25, port: 25048, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/rn, headers: {Host: usbv2.ddns.tjiasu.xyz}}}
 proxy-groups:
   - name: Proxies
@@ -33,6 +34,7 @@ proxy-groups:
       - 🇸🇬 [备用] 新加坡-长沙联通BGP入口
       - 🇺🇸 [备用] 美国A | 上海移动高速入口
       - 🇺🇸 [备用] 美国B | 江门移动高速入口
+      - 🇸🇬 [备用] 新加坡-AZ入口
 rules:
  - GEOIP,CN,DIRECT
  - MATCH,Proxies
